# Lex360

./: .dockerignore  .gitignore  .mcpbignore  Caddyfile  Dockerfile  INSTALL.md  README.md  bookmarklet.txt  compose.yml  manifest.json  pyproject.toml
docs/: lex.md
gateway/: __init__.py  auth.py  bridge.py  oauth.py  requirements.txt  server.py
gateway/templates/: index.html
lex360/: __init__.py  auth.py  cli.py  client.py  documents.py  exceptions.py  export.py  mcp_server.py  models.py  navigation.py  search.py  text.py  transport.py  transport_curl.py
scripts/: download_fascicule.js  rate-limit-test.sh  test_curl_cffi.py
scripts/results/: aggregate_burst.csv  aggregate_burst.csv.headers  auth_check.csv  auth_check.csv.headers  metadata_burst.csv  metadata_burst.csv.headers  progressive_0.1s.csv  progressive_0.1s.csv.headers  progressive_0.2s.csv  progressive_0.2s.csv.headers  progressive_0.5s.csv  progressive_0.5s.csv.headers  progressive_0s.csv  progressive_0s.csv.headers  progressive_1s.csv  progressive_1s.csv.headers  recovery_phase1.csv  recovery_phase1.csv.headers  recovery_phase2.csv  recovery_phase2.csv.headers  search_burst.csv  search_burst.csv.headers  search_parallel_10.csv  search_parallel_30.csv  suggest_burst.csv  suggest_burst.csv.headers  whoami_burst.csv  whoami_burst.csv.headers
tests/: conftest.py  test_00b_transport_curl.py  test_01_auth.py  test_02_search.py  test_03_documents.py  test_04_navigation.py  test_05_export.py  test_06_cli.py  test_07_mcp.py  test_08_toc.py
web/: app.py
web/templates/: index.html
