[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lex360"
version = "0.2.0"
description = "Client Python pour l'API privée de Lexis 360 Intelligence"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7",
    "pydantic>=2.0",
    "click>=8.0",
    "beautifulsoup4>=4.12",
    "mcp>=1.0",
]

[project.optional-dependencies]
web = ["flask>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "flask>=3.0",
    "mcp>=1.0",
]

[project.scripts]
lex360 = "lex360.cli:main"
lex360-mcp = "lex360.mcp_server:main"

[tool.pytest.ini_options]
addopts = "-p no:asyncio -p no:anyio"
markers = [
    "integration: tests nécessitant un LEX_TOKEN valide",
]
